--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,10 +7,10 @@
         android:title="Home" />
     <item
         android:id="@+id/menFragment"
-        android:icon="@drawable/ic_men"
-        android:title="Men" />
+        android:icon="@drawable/ic_search"
+        android:title="Search" />
     <item
-        android:id="@+id/womenFragment"
-        android:icon="@drawable/ic_women"
-        android:title="Women" />
+        android:id="@+id/profileFragment"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile" />
 </menu>
