--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,13 +11,13 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
-        android:id="@+id/menFragment"
+        android:id="@+id/searchFragment"
         android:name="com.riteshapps.driftline.ui.SearchFragment"
-        android:label="fragment_men"
+        android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.riteshapps.driftline.ui.WomenFragment"
+        android:name="com.riteshapps.driftline.ui.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
